@@ -1,0 +1,277 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!-- $Id$ -->
+<dds xmlns="http://www.omg.org/dds"
+     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+     xsi:schemaLocation="http://www.omg.org/dds ../../../docs/schema/dds_qos.xsd">
+  <qos_profile name="TestProfile">
+    <datareader_qos>
+          <durability>
+                 <kind>VOLATILE_DURABILITY_QOS</kind>
+          </durability>
+          <deadline>
+               <period>
+                    <sec>DURATION_INFINITE_SEC</sec>
+                    <nanosec>DURATION_INFINITE_NSEC</nanosec>
+               </period>
+          </deadline>
+          <latency_budget>
+               <duration>
+                    <sec>0</sec>
+                    <nanosec>0</nanosec>
+               </duration>
+          </latency_budget>
+          <liveliness>
+               <kind>AUTOMATIC_LIVELINESS_QOS</kind>
+               <lease_duration>
+                    <sec>DURATION_INFINITE_SEC</sec>
+                    <nanosec>DURATION_INFINITE_NSEC</nanosec>
+               </lease_duration>
+          </liveliness>
+          <reliability>
+               <kind>BEST_EFFORT_RELIABILITY_QOS</kind>
+               <max_blocking_time>
+                    <sec>0</sec>
+                    <nanosec>100000000</nanosec>
+               </max_blocking_time>
+          </reliability>
+          <destination_order>
+                <kind>BY_RECEPTION_TIMESTAMP_DESTINATIONORDER_QOS</kind>
+          </destination_order>
+          <history>
+               <kind>KEEP_LAST_HISTORY_QOS</kind>
+               <depth>1</depth>
+          </history>
+          <resource_limits>
+               <max_samples>LENGTH_UNLIMITED</max_samples>
+               <max_instances>LENGTH_UNLIMITED</max_instances>
+               <max_samples_per_instance>LENGTH_UNLIMITED</max_samples_per_instance>
+          </resource_limits>
+          <!--user_data>
+               <value></value>
+          </user_data-->
+          <ownership>
+               <kind>SHARED_OWNERSHIP_QOS</kind>
+          </ownership>
+          <time_based_filter>
+               <minimum_separation>
+                    <sec>0</sec>
+                    <nanosec>0</nanosec>
+               </minimum_separation>
+          </time_based_filter>
+          <reader_data_lifecycle>
+               <autopurge_nowriter_samples_delay>
+                    <sec>DURATION_INFINITE_SEC</sec>
+                    <nanosec>DURATION_INFINITE_NSEC</nanosec>
+               </autopurge_nowriter_samples_delay>
+               <autopurge_disposed_samples_delay>
+                    <sec>DURATION_INFINITE_SEC</sec>
+                    <nanosec>DURATION_INFINITE_NSEC</nanosec>
+               </autopurge_disposed_samples_delay>
+          </reader_data_lifecycle>
+     </datareader_qos>
+     <datawriter_qos>
+          <durability>
+               <kind>VOLATILE_DURABILITY_QOS</kind>
+          </durability>
+          <durability_service>
+               <service_cleanup_delay>
+                    <sec>0</sec>
+                    <nanosec>0</nanosec>
+               </service_cleanup_delay>
+               <history_kind>KEEP_LAST_HISTORY_QOS</history_kind>
+               <history_depth>1</history_depth>
+               <max_samples>LENGTH_UNLIMITED</max_samples>
+               <max_instances>LENGTH_UNLIMITED</max_instances>
+               <max_samples_per_instance>LENGTH_UNLIMITED</max_samples_per_instance>
+          </durability_service>
+          <deadline>
+               <period>
+                    <sec>DURATION_INFINITE_SEC</sec>
+                    <nanosec>DURATION_INFINITE_NSEC</nanosec>
+               </period>
+          </deadline>
+          <latency_budget>
+               <duration>
+                    <sec>0</sec>
+                    <nanosec>0</nanosec>
+               </duration>
+          </latency_budget>
+          <liveliness>
+               <kind>AUTOMATIC_LIVELINESS_QOS</kind>
+               <lease_duration>
+                    <sec>DURATION_INFINITE_SEC</sec>
+                    <nanosec>DURATION_INFINITE_NSEC</nanosec>
+               </lease_duration>
+          </liveliness>
+          <reliability>
+               <kind>RELIABLE_RELIABILITY_QOS</kind>
+               <max_blocking_time>
+                    <sec>0</sec>
+                    <nanosec>100000000</nanosec>
+               </max_blocking_time>
+         </reliability>
+         <destination_order>
+              <kind>BY_RECEPTION_TIMESTAMP_DESTINATIONORDER_QOS</kind>
+          </destination_order>
+          <history>
+               <kind>KEEP_LAST_HISTORY_QOS</kind>
+               <depth>1</depth>
+          </history>
+          <resource_limits>
+               <max_samples>LENGTH_UNLIMITED</max_samples>
+               <max_instances>LENGTH_UNLIMITED</max_instances>
+               <max_samples_per_instance>LENGTH_UNLIMITED</max_samples_per_instance>
+          </resource_limits>
+          <transport_priority>
+               <value>0</value>
+          </transport_priority>
+          <lifespan>
+               <duration>
+                    <sec>DURATION_INFINITE_SEC</sec>
+                    <nanosec>DURATION_INFINITE_NSEC</nanosec>
+               </duration>
+          </lifespan>
+          <!--user_data>
+               <value></value>
+         </user_data-->
+         <ownership>
+              <kind>SHARED_OWNERSHIP_QOS</kind>
+          </ownership>
+          <ownership_strength>
+               <value>0</value>
+          </ownership_strength>
+          <writer_data_lifecycle>
+               <autodispose_unregistered_instances>true</autodispose_unregistered_instances>
+          </writer_data_lifecycle>
+     </datawriter_qos>
+     <domainparticipant_qos>
+          <!--user_data>
+               <value></value>
+          </user_data-->
+          <entity_factory>
+               <autoenable_created_entities>true</autoenable_created_entities>
+          </entity_factory>
+     </domainparticipant_qos>
+     <subscriber_qos>
+          <presentation>
+               <access_scope>INSTANCE_PRESENTATION_QOS</access_scope>
+               <coherent_access>false</coherent_access>
+               <ordered_access>false</ordered_access>
+          </presentation>
+          <partition>
+               <name>
+                 <element>ABC</element>
+                 <element>DEF</element>
+                 <element>GHI</element>
+                 <element>JKL</element>
+                 <element>MNO</element>
+                 <element>PQR</element>
+                 <element>STU</element>
+                 <element>VW</element>
+                 <element>XYZ</element>
+              </name>
+          </partition>
+          <!--group_data>
+               <value></value>
+          </group_data-->
+          <entity_factory>
+               <autoenable_created_entities>true</autoenable_created_entities>
+          </entity_factory>
+     </subscriber_qos>
+     <publisher_qos>
+          <presentation>
+               <access_scope>INSTANCE_PRESENTATION_QOS</access_scope>
+               <coherent_access>false</coherent_access>
+               <ordered_access>false</ordered_access>
+          </presentation>
+          <partition>
+               <name>
+                 <element>XYZ</element>
+                 <element>VW</element>
+                 <element>STU</element>
+                 <element>PQR</element>
+                 <element>MNO</element>
+                 <element>JKL</element>
+                 <element>GHI</element>
+                 <element>DEF</element>
+                 <element>ABC</element>
+              </name>
+          </partition>
+          <!--group_data>
+               <value></value>
+          </group_data-->
+          <entity_factory>
+               <autoenable_created_entities>true</autoenable_created_entities>
+          </entity_factory>
+     </publisher_qos>
+     <topic_qos>
+          <!--topic_data>
+               <value></value>
+          </topic_data-->
+          <durability>
+               <kind>VOLATILE_DURABILITY_QOS</kind>
+          </durability>
+          <durability_service>
+               <service_cleanup_delay>
+                    <sec>0</sec>
+                    <nanosec>0</nanosec>
+               </service_cleanup_delay>
+               <history_kind>KEEP_LAST_HISTORY_QOS</history_kind>
+               <history_depth>1</history_depth>
+               <max_samples>LENGTH_UNLIMITED</max_samples>
+               <max_instances>LENGTH_UNLIMITED</max_instances>
+               <max_samples_per_instance>LENGTH_UNLIMITED</max_samples_per_instance>
+          </durability_service>
+          <deadline>
+               <period>
+                    <sec>DURATION_INFINITE_SEC</sec>
+                    <nanosec>DURATION_INFINITE_NSEC</nanosec>
+               </period>
+          </deadline>
+          <latency_budget>
+               <duration>
+                    <sec>0</sec>
+                    <nanosec>0</nanosec>
+               </duration>
+          </latency_budget>
+          <liveliness>
+               <kind>AUTOMATIC_LIVELINESS_QOS</kind>
+               <lease_duration>
+                    <sec>DURATION_INFINITE_SEC</sec>
+                    <nanosec>DURATION_INFINITE_NSEC</nanosec>
+               </lease_duration>
+          </liveliness>
+          <reliability>
+               <kind>BEST_EFFORT_RELIABILITY_QOS</kind>
+               <max_blocking_time>
+                    <sec>0</sec>
+                    <nanosec>100000000</nanosec>
+                    </max_blocking_time>
+          </reliability>
+          <destination_order>
+               <kind>BY_RECEPTION_TIMESTAMP_DESTINATIONORDER_QOS</kind>
+          </destination_order>
+          <history>
+               <kind>KEEP_LAST_HISTORY_QOS</kind>
+               <depth>1</depth>
+          </history>
+          <resource_limits>
+               <max_samples>LENGTH_UNLIMITED</max_samples>
+               <max_instances>LENGTH_UNLIMITED</max_instances>
+               <max_samples_per_instance>LENGTH_UNLIMITED</max_samples_per_instance>
+          </resource_limits>
+          <transport_priority>
+               <value>0</value>
+          </transport_priority>
+          <lifespan>
+               <duration>
+                    <sec>DURATION_INFINITE_SEC</sec>
+                    <nanosec>DURATION_INFINITE_NSEC</nanosec>
+               </duration>
+          </lifespan>
+          <ownership>
+               <kind>SHARED_OWNERSHIP_QOS</kind>
+          </ownership>
+     </topic_qos>
+  </qos_profile>
+</dds>
